fixed issue where preview title and hexagon title overlap.

--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ body {
     background-color: rgb(122, 0, 65);
     position: absolute;
     top: -5%;
-    /* height: 25%; */
+    /* height: 20%; */
 
     width: 75%;
     overflow: hidden;
@@ -69,11 +69,30 @@ body {
     top: -50%; */
     text-align: center;
     color: white;
-    font-size: 4vh;
+    font-size: 1.5rem;
     /* background-color: blue; */
     /* width: 100%; */
-    height: 25%;
-    margin: 0 5vh 0 5vh;
+    /* height: 25%; */
+    margin: 0.25rem 5rem 0 5rem;
+}
+
+.titleContainer{
+    position: relative;
+    /* border: rgb(212, 1, 114) 0.4vw groove; */
+    top: 7.5%;
+    height: 82.5%;
+    display: flex;
+    align-items: center;
+
+    /* margin: ; */
+    /* padding: 50% 0% 50% 0%; */
+}
+
+.TextPreview{
+    margin-top: 10%;
+    text-align: center;
+    color: white;
+    font-size: 2.25rem;
 }
 
 .hexagon {
